Fix Pair Devices Window